methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: not found: value verslAvant
  if (verslAvant==false){
      ^MethodsArgs:10: error: not found: value versLavant
  return versLavant
         ^MethodsArgs:10: warning: enclosing method move has result type Unit: return value discarded
  return versLavant
  ^