methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  
  if (verslAvant==false){
    avance(nbPas)
  }
  else{
    recule()
  }
  return versLavant
}